fix play z-index

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -67,6 +67,8 @@
 
 .play {
     margin-top: 5% !important;
+    position: relative;
+    z-index: 99;
 }
 
 .answers {
@@ -85,7 +87,15 @@
 .btn-normal {
     background-color: #D9D9D9 !important;
     color: #181818 !important;
-} 
+}
+.btn-success {
+    background-color: green !important;
+    color: white !important;
+}
+.btn-danger {
+    background-color: red !important;
+    color: white !important;
+}
 
 .option-button {
     height: 100%;
@@ -185,6 +195,8 @@
 
     .play {
         margin-top: 5% !important;
+        position: relative;
+        z-index: 99;
     }
 
     .answers {
@@ -197,6 +209,20 @@
     }
     .options {
         margin-bottom: 2%;
+    }
+    .btn-normal {
+        background-color: #D9D9D9 !important;
+        color: #181818 !important;
+    }
+
+    .btn-success {
+        background-color: green !important;
+        color: white !important;
+    }
+
+    .btn-danger {
+        background-color: red !important;
+        color: white !important;
     }
     .option-button {
         background-color: #D9D9D9 !important;
@@ -273,6 +299,8 @@
 
     .play {
         margin-top: 5% !important;
+        position: relative;
+        z-index: 99;
     }
 
     .answers {
@@ -284,7 +312,20 @@
         width: 100% !important;
         align-items: stretch !important
     }
+    .btn-normal {
+        background-color: #D9D9D9 !important;
+        color: #181818 !important;
+    }
 
+    .btn-success {
+        background-color: green !important;
+        color: white !important;
+    }
+
+    .btn-danger {
+        background-color: red !important;
+        color: white !important;
+    }
     .option-button {
         background-color: #D9D9D9 !important;
         color: #181818 !important;
@@ -356,6 +397,8 @@
 
     .play {
         margin-top: 1% !important;
+        position: relative;
+        z-index: 99;
     }
 
     .answers {
@@ -367,7 +410,20 @@
         width: 100% !important;
         align-items: stretch !important
     }
+    .btn-normal {
+        background-color: #D9D9D9 !important;
+        color: #181818 !important;
+    }
 
+    .btn-success {
+        background-color: green !important;
+        color: white !important;
+    }
+
+    .btn-danger {
+        background-color: red !important;
+        color: white !important;
+    }
     .option-button {
         background-color: #D9D9D9 !important;
         color: #181818 !important;
@@ -438,20 +494,36 @@
     }
     .play {
         margin-top: 1% !important;
+        position: relative;
+        z-index: 99;
     }
 
     .answers {
-        padding-right: 5%;
-        padding-left: 5%;
+        padding-right: 0%;
+        padding-left: 0%;
         position: absolute; 
         margin-top: -12%;
-        height: 100px;
+        height: 10px !important;
         width: 100% !important;
         align-items: stretch !important
     }
-    .option-button {
+    .btn-normal {
         background-color: #D9D9D9 !important;
         color: #181818 !important;
+    }
+
+    .btn-success {
+        background-color: green !important;
+        color: white !important;
+    }
+
+    .btn-danger {
+        background-color: red !important;
+        color: white !important;
+    }
+    .option-button {
+        /* background-color: #D9D9D9 !important; */
+        /* color: #181818 !important; */
         height: 130px;
         width: 100%;
         font-family: Lato, 'Noto Sans', sans-serif !important;
